<resources>
    <string name="app_name">SimpleTemp</string>
    <string name="simple">Simple</string>
    <string name="temp">Temp</string>
    <string name="choose_account_type">Choose Account Type</string>
    <string name="clinic">Clinic</string>
    <string name="dental_hygienist">Dental Hygienist</string>
    <string name="dental_nurse">Dental Nurse</string>
    <string name="back">back</string>
    <string name="welcome_to_simpletemp">Welcome to SimpleTemp</string>
    <string name="dental_temping_made_easy">Dental Temping Made Easy</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_log_in">Have an account ? Log in</string>
    <string name="we_value_your_privacy_and_safety">We value your privacy and safety.</string>
    <string name="read_our">Read our</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="full_name">Full Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="by_continuing_you_agree_that_you_have_read_and">By continuing, you agree that you have read and</string>
    <string name="agree_with_the">agree with the</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="and">and</string>
    <string name="jobs">Jobs</string>
    <string name="notif">Notif</string>
    <string name="home">Home</string>
    <string name="money">Money</string>
    <string name="profile">Profile</string>
    <string name="verify_your_email_address">Verify your email address</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="verify_and_continue">Verify and continue</string>
    <string name="didn_t_receive_the_link">Didn’t receive the link?</string>
    <string name="resend_"><u>Resend</u></string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="sent_a_verification_code_msg">We’ve sent a verification code to your\nemail</string>
    <string name="you_re_all_set">You’re all set</string>
    <string name="please_create_your_profile_msg">Please create your profile to\nstart Using SimpleTemp</string>
    <string name="feel_free_to_navigate_msg">Feel free to navigate\nSimpleTemp in the meantime.</string>
    <string name="turn_on_notifications">Turn on notifications</string>
    <string name="get_reminders_about_upcoming_shifts_msg">Get reminders about upcoming shifts\nand important information.</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="skip">skip</string>
    <string name="a_confirmation_has_been_sent_to">A confirmation has been\nsent to</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_the_email_associated_with_your_account_msg">Enter the email associated with your\naccount and we’ll send an email with\ninstructions to reset your password.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send">Send</string>
    <string name="confirm_password">Confirm password</string>
    <string name="must_be_at_least_8_characters">Must be at least 8 characters</string>
    <string name="both_passwords_must_match">Both passwords must match.</string>
    <string name="create_new_password">Create new password</string>
    <string name="your_new_password_must_be_different_msg">Your new password must be different from\nprevious used passwords.</string>
    <string name="warning">Warning</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="oops">Oops!</string>
    <string name="update">Update</string>
    <string name="update_now">Update now</string>
    <string name="help">help</string>
    <string name="complete_profile">Complete profile</string>
    <string name="my_profile">My profile</string>
    <string name="account_settings">Account Settings</string>
    <string name="my_ratings">My Ratings</string>
    <string name="support">Support</string>
    <string name="logout">Log Out</string>
    <string name="account_information">Account Information</string>
    <string name="address_">{{Address}}</string>
    <string name="cellphone_">{{Cellphone}}</string>
    <string name="certification_number_">{{Certification number}}</string>
    <string name="graduation_year_">{{Graduation year}}</string>
    <string name="personal_information">Personal Information</string>
    <string name="banking_information">Banking Information</string>
    <string name="account_number_">{{Account Number}}</string>
    <string name="sort_code_">{{Sort Code}]</string>
    <string name="please_complete_your_profile_msg">Please complete your profile to start sending offers and take your first shift.</string>
    <string name="account_info">Account Info</string>
    <string name="personal_info">Personal Info</string>
    <string name="banking_info">Banking Info</string>
    <string name="account">Account</string>
    <string name="postcode">Postcode</string>
    <string name="example_post_code_">Example 123456789</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="example_address_line">Example No 23 , 34th st</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="optional_">(optional)</string>
    <string name="town_city">Town / city</string>
    <string name="london">London</string>
    <string name="cellphone">Cellphone</string>
    <string name="example_cellphone">Example +44 000 000 0000</string>
    <string name="next">Next</string>
    <string name="certification_number">Certification Number</string>
    <string name="not_editable">Not Editable</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="specialties">Specialties</string>
    <string name="example_oral_">Example Oral Surgery, Restorative Dentistry</string>
    <string name="upload_these_items">Upload these items</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="dbs_certificate">DBS certificate</string>
    <string name="next_">next</string>
    <string name="iban_number">IBAN Number</string>
    <string name="example_nl_">Example NL91ABNA0517164300</string>
    <string name="bic_swift_code_">BIC (Swift Code)</string>
    <string name="example_abn_">Example ABNANL2A</string>
    <string name="bank_name">Bank Name</string>
    <string name="select_the_bank_name">Select the bank name</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="example_bank_name_">Example bank name</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="example_345455667887980_">Example 345455667887980</string>
    <string name="sort_number">Sort number</string>
    <string name="save_">save</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="professionalism">Professionalism</string>
    <string name="timekeeping">Timekeeping</string>
    <string name="competency_and_skills">Competency and Skills</string>
    <string name="reviews">Reviews</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="new_ticket">new ticket</string>
    <string name="to_send_us_an_email_msg">To send us an email at\n<font color="#FF2B5D82">hello@simpletemp.co.uk,</font> please\nproceed with creating a new ticket.\nWe will get back to you within 24 hours.</string>
    <string name="create_new_ticket">Create new ticket</string>
    <string name="enter_the_subject">Enter the subject</string>
    <string name="description">Description</string>
    <string name="you_can_type_your_problem">You can type your problem</string>
    <string name="priority">Priority</string>
    <string name="select_your_own">Select your own</string>
    <string name="category">Category</string>
    <string name="select_department">Select department</string>
    <string name="simple_temp">Simple Temp</string>
    <string name="simpletemp">SimpleTemp</string>
    <string name="need_more_help">Need more help?</string>
    <string name="retry">Retry</string>
    <string name="not_found">Not found</string>
    <string name="pending_authentication">Pending Authentication</string>
    <string name="done">Done</string>
    <string name="faq">FAQ</string>
    <string name="ticket_list">Ticket List</string>
    <string name="messages">Messages</string>
    <string name="result">Result</string>
    <string name="message_sent_successfully">Message Sent Successfully</string>
    <string name="message_sent_msg">Thank you for contacting us.\nWe will respond to your inquiry\nwithin 24 hours.</string>
    <string name="you_have_already_accepted_an_offer_msg">You have already accepted an offer on this date. Unfortunately you can not accept more than one offer per day.</string>
    <string name="this_offer_is_no_longer_available_msg">Unfortunately this offer is no longer available. Details cannot be displayed.</string>
    <string name="this_shift_is_no_longer_available_msg">Unfortunately this shift is no longer available. Details cannot be displayed.</string>
    <string name="are_you_sure_disagree_title">Are you sure you disagree with the disputed invoice?</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="verification">Verification</string>
    <string name="new_password">New Password</string>
    <string name="rating">Rating</string>
    <string name="notification_center">Notification Center</string>
    <string name="job_history">Job History</string>
    <string name="jobs_">JOBS</string>
    <string name="this_month">This month</string>
    <string name="total_from">Total from</string>
    <string name="post_shift">Post Shift</string>
    <string name="clinic_profile">Clinic profile</string>
    <string name="clinic_ratings">Clinic Ratings</string>
    <string name="clinic_notes_and_documents">Clinic Notes and Documents</string>
    <string name="please_complete_your_profile_clinic_msg">Please complete your profile to post your first shift and start hiring dental temps.</string>
    <string name="clinic_info">Clinic Info</string>
    <string name="clinic_information">Clinic Information</string>
    <string name="pin_your_location">Pin your location</string>
    <string name="location">Location</string>
    <string name="clinic_phone_number">Clinic Phone Number</string>
    <string name="primary_dentist_name">Primary Dentist Name</string>
    <string name="enter_dentist_name">Enter dentist name</string>
    <string name="primary_dentist_cert_number">Primary Dentist Cert. Number</string>
    <string name="enter_certification_number">Enter certification number</string>
    <string name="clinic_details">Clinic Details</string>
    <string name="payment_method">Payment Method</string>
    <string name="map">Map</string>
    <string name="primary_contact_name_manager">Primary Contact Name (Manager)</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="parking">Parking</string>
    <string name="please_select">Please select</string>
    <string name="radiography">Radiography</string>
    <string name="ultrasonic">Ultrasonic</string>
    <string name="charting">Charting</string>
    <string name="dental_software_name">Dental Software Name</string>
    <string name="enter_name_of_software">Enter name of software</string>
</resources>