<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_dest"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/notif_dest"
        android:icon="@drawable/ic_notification"
        android:title="@string/notif" />

    <item
        android:id="@+id/post_shift_dest"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/post_shift" />

    <item
        android:id="@+id/money_dest"
        android:icon="@drawable/ic_wallet"
        android:title="@string/money" />

    <item
        android:id="@+id/profile_dest"
        android:icon="@drawable/ic_profile_circle"
        android:title="@string/profile" />

</menu>