<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowsBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.pages.common.authentication.auth.AuthFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="8dp"
        android:background="?android:attr/actionBarItemBackground"
        android:contentDescription="@string/back"
        android:padding="8dp"
        android:src="@drawable/ic_back"
        app:tint="@color/colorAccent" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/logo_size_height"
        android:src="@drawable/ic_logo"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome_to_simpletemp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/dental_temping_made_easy"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/colorTextSecondary" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/have_an_account_log_in"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/we_value_your_privacy_and_safety"
        android:textColor="@color/colorTextGray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/read_our"
            android:textColor="@color/colorTextGray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/privacy_policy"
            android:textColor="@color/colorEditText"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>