<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowsBackground"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.pages.common.authentication.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="16dp"
            android:background="?android:attr/actionBarItemBackground"
            android:contentDescription="@string/back"
            android:padding="8dp"
            android:src="@drawable/ic_back"
            app:tint="@color/colorAccent" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textColor="@color/colorTextPrimary" />

        <EditText
            android:id="@+id/edt_name"
            style="@style/AppEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_profile_circle"
            android:drawablePadding="12dp"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edt_email"
            style="@style/AppEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/TilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_re_password"
            style="@style/TilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/repeat_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal"
            android:text="@string/by_continuing_you_agree_that_you_have_read_and"
            android:textColor="@color/colorTextSecondary"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/agree_with_the"
                android:textColor="@color/colorTextSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_terms_of_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:text="@string/terms_of_service"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/and"
                android:textColor="@color/colorTextSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/already_have_an_account"
                android:textColor="@color/colorTextGray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/log_in"
                android:textColor="@color/colorEditText"
                android:textSize="16sp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</ScrollView>