<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowsBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.pages.common.authentication.forgot.ForgotPasswordFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:background="?android:attr/actionBarItemBackground"
        android:contentDescription="@string/back"
        android:padding="8dp"
        android:src="@drawable/ic_back"
        app:tint="@color/colorAccent" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/reset_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/enter_the_email_associated_with_your_account_msg"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/colorTextSecondary" />

    <EditText
        android:id="@+id/edt_email"
        style="@style/AppEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_your_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="24dp"
        tools:ignore="Autofill" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>